--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,17 +3,16 @@
 {
 	"name": "Python 3",
 
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm",
+	"image": "mcr.microsoft.com/devcontainers/python:3.12",
 
 	"containerEnv": {
-		"VNC_RESOLUTION": "600x600x16",
 		"SDL_VIDEO_WINDOW_POS": "0,0", // GUI Windows all the way in the upper left. 
 		"SDL_AUDIODRIVER": "dummy" // Disable audio
     }, 
 	
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
-		"ghcr.io/devcontainers/features/desktop-lite:1.2.7": {
+		"ghcr.io/devcontainers/features/desktop-lite:1": {
 			"password" : "code4life"
 		}
 	},
@@ -32,13 +31,14 @@
 	},
 
 
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "./.devcontainer/setup.sh",
+	// Use 'initializeCommand' to run commands every time the container starts
+	"initializeCommand": "bash ./.devcontainer/setup.sh ${containerWorkspaceFolder}",
+	
 
 	"customizations": {
 	    "codespaces": {
 	      "openFiles": [
-			"lessons/00_Getting_Started/README.md"
+			"lessons/10_Turtles/10_Welcome/10_Welcome.ipynb"
 		  ]
 	    },
 	    "vscode": {
@@ -46,10 +46,12 @@
 	        "ms-python.python",
 	        "ms-python.debugpy",
 			"ms-python.isort",
-			"ms-toolsai.jupyter"
+			"ms-toolsai.jupyter",
+			"jointheleague.jtl-syllabus"
 	      ], 
 		  "settings": {
-
+			"python.defaultInterpreterPath": "/usr/local/bin/python",
+			"python.terminal.activateEnvironment": true
 		  }
 	    }
   	}
